--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/icons-material": "^5.14.14",
     "@mui/material": "^5.14.14",
+    "@mui/x-date-pickers": "^6.17.0",
     "@popperjs/core": "^2.11.8",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -23,11 +24,15 @@
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.4",
     "bootstrap": "^5.3.2",
+    "dayjs": "^1.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.1",
     "typescript": "^4.9.5",
+    "uuid": "^9.0.1",
     "vite": "^4.4.9",
     "web-vitals": "^2.1.4"
   },
@@ -56,6 +61,7 @@
     ]
   },
   "devDependencies": {
+    "@reduxjs/toolkit": "^1.9.7",
     "autoprefixer": "^10.4.15",
     "css-loader": "^6.8.1",
     "path": "^0.12.7",
