--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "@types/react": "^18.2.22",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.4",
+    "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "dayjs": "^1.11.10",
+    "dotenv": "^16.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
