--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 VITE_REACT_APP_API_BASE=https://kanbas-node-server-app-muhm.onrender.com/api
-VITE_REACT_APP_BASE_API_URL=https://kanbas-node-server-app-muhm.onrender.com
+VITE_REACT_APP_BASE_API_URL=http://localhost:4000
